--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   },
   "homepage": "https://github.com/mayalorimer/House-Plant-Helper#readme",
   "dependencies": {
-    "sequelize": "^6.21.2",
     "bcrypt": "^5.0.0",
+    "cloudinary-core": "^2.12.3",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.21.2"
   }
 }
