--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "homepage": "https://github.com/mayalorimer/House-Plant-Helper#readme",
   "dependencies": {
+    "@cloudinary/url-gen": "^1.8.0",
     "bcrypt": "^5.0.0",
-    "cloudinary-core": "^2.12.3",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
